--- a/10 - Hold Shift and Check Checkboxes/index.html
+++ b/10 - Hold Shift and Check Checkboxes/index.html
@@ -15,7 +15,7 @@
     .inbox {
       max-width:400px;
       margin:50px auto;
-      background:white;
+      background:#3eb56e;
       border-radius:5px;
       box-shadow:10px 10px 0 rgba(0,0,0,0.1);
     }
@@ -23,7 +23,7 @@
     .item {
       display:flex;
       align-items:center;
-      border-bottom: 1px solid #F1F1F1;
+      /*border-bottom: 1px solid #F1F1F1;*/
     }
 
     .item:last-child {
@@ -48,6 +48,7 @@
       font-family:'helvetica neue';
       font-size: 20px;
       font-weight: 200;
+      color: white;
       border-left: 1px solid #D1E2FF;
     }
 
